styles.css
/* Containers */
.main{
  display: flex;
  position: relative;
  justify-content: center;
  align-items: center;
  background-color: black;
  border-right: 3px solid white ;
  width: 100%;
  height: 100%;
  min-height: 100vh;
  padding-right: 60px;
}
.calc{
  display: flex;
  flex-direction: column;
  padding-right: 5%;
}
.border{
  display: flex;
  position: relative;
  justify-content: flex-end;
  align-items: flex-end;
  width: 360px;
  height: 670px;
  border-radius: 30px;
  background-color: #fde7f9;
  background-image: linear-gradient(315deg, #fde7f9 0%, #aacaef 74%);
}
.screen-border{
  background-color: #fde7f9;
  background-image: linear-gradient(315deg, #fde7f9 0%, #aacaef 74%);
  border-radius: 15px 15px 0 0;
  width: 320px;
  height: 228px;
  box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;
}
.row{
  display: flex;
  flex-grow: 1;
  align-items: center;
  justify-content: space-around;
}
.button{
  position: relative;
  display: flex;
  align-items: center;
  background-color: #434343;
  background-image: linear-gradient(147deg, #434343 0%, rgb(25, 25, 25) 74%);
  border-radius: 800px;
  width: 69px;
  height: 69px;
}
.button:hover{
  cursor: pointer;
}
.button:active{
  cursor: pointer;
  background-color: rgb(25, 25, 25);
  background-image: linear-gradient(147deg, rgb(25, 25, 25) 0%, #434343 74%);
}
.dbl-button{
  display: flex;
  align-items: center;
  background-color: rgb(33, 33, 33);
  border-radius: 800px;
  width: 138px;
  min-width: 138px;
  height: 69px;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}
.dbl-shadow{
  display: flex;
  width: 139.25px;
  min-width: 139.25px;
  background-color: red;
}
.buttons{
  display: flex;
  flex: 1 0 auto;
  flex-direction: column;
  padding: 0 10px;
}
.button-shadow{
  display: flex;
  background-color: #f1f2f6;
    background-color: #fde7f9;
    background-image: linear-gradient(315deg, #fde7f9 0%, #aacaef 74%);
  width: 69.25px;
  height: 68px;
  border-radius: 800px;
}
.calculator{
  display: flex;
  flex-direction: column;
  padding: 20px;
  background-color: rgb(15, 15, 15);
  width: 360px;
  height: 670px;
  border-radius: 30px;
  justify-content: space-between;
  position: absolute;
  top: 1px;
  right: -1px;
}

/* Unique Components */
.screen{
  background-color: #434343;
  background-image: linear-gradient(147deg, #434343 0%, rgb(15,15,15) 74%);
  border-radius: 15px 15px 0 0;
  width: 320px;
  height: 208px;
  justify-content: flex-end;
  align-items: end;
  padding: 5px;
  box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;
  position: relative;
  }
  #operator{
    position: absolute;
    font-family: futura-pt, sans-serif;
    font-size: 50px;
    color: white;
    top: 12px;
    left: 30px;
  }
.result{
  font-size: 60px;
  font-weight: 800;
  font-family: futura-pt, sans-serif;
  font-weight: 700;
  font-style: normal;
  color: white;
}
.nine{
  font-size: 50px;
}
.txt{
  display: flex;
  font-size: 35px;
  width: 100%;
  height: 100%;
  color: white;
  justify-content: center;
  align-items: center;
  font-family: futura-pt, sans-serif;
  font-weight: 400;
  font-style: normal;
  vertical-align: baseline;
  text-align: center;
  user-select: none;
    /* supported by Chrome and Opera */
    -webkit-user-select: none;
    /* Safari */
    -khtml-user-select: none;
    /* Konqueror HTML */
    -moz-user-select: none;
    /* Firefox */
    -ms-user-select: none;
    /* Internet Explorer/Edge */
}
.operator{
  display: flex;
  font-size: 35px;
  width: 100%;
  height: 100%;
  color: white;
  justify-content: center;
  align-items: center;
  font-family: futura-pt, sans-serif;
  font-weight: 400;
  font-style: normal;
  vertical-align: baseline;
  text-align: center;
  user-select: none;
  /* supported by Chrome and Opera */
  -webkit-user-select: none;
  /* Safari */
  -khtml-user-select: none;
  /* Konqueror HTML */
  -moz-user-select: none;
  /* Firefox */
  -ms-user-select: none;
  /* Internet Explorer/Edge */
}
.divider{
  height: 10px;
}
.title{
  font-family: futura-pt, sans-serif;
  font-style: normal;
  font-size: 60px;
  font-weight: 600;
  color: white;
}
.sub{
  font-family: futura-pt, sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 50px;
  font-weight: 400;
  color: white;
}

/* Colors and Independat Styles */
.red{
  background-color: RGB(217,
    54,
    54);
  background-image: linear-gradient(147deg, RGB(217,
      54,
      54) 0%, rgb(203,
    40,
    40) 74%);
}
.red:active{
  background-color: RGB(203,
      40,
      40);
  background-image: linear-gradient(147deg, rgb(203,
      40,
      40) 0%, RGB(217,
          54,
          54) 74%);
}
.white{
  background-color: white;
    background-image: linear-gradient(147deg, rgb(254, 254, 254) 0%, rgb(220,
          220,
          220) 74%);
}
.white:active{
  background-color: rgb(220,
      220,
      220);
    background-image: linear-gradient(147deg, rgb(220,
        220,
        220) 0%, rgb(255,255,255) 74%);
}
#clear{
  color: black;
}
/* Specific Sizing/ Spacing */
.grow2{
  flex-grow: 2;
}
.grow3{
  flex-grow: 3;
}

